[package]
name = "qikv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
anyhow = "1.0"
rand = "0.8.5"
skiplist = "0.4.0"
bincode = "1.3.3"
serde = { version = "1.0", features = ["derive"] }
tempdir = "0.3.7"
